Prepare module Pub, call API

--- a/src/BrewUp.Web.Modules.Pubs/Pubs.razor
+++ b/src/BrewUp.Web.Modules.Pubs/Pubs.razor
@@ -14,12 +14,12 @@
 <MudAlert id="alert-message">@Message</MudAlert>
 
 <div hidden="@HideGrid">
-	<PubsGrid Beers="@Beers"></PubsGrid>
+	<PubsGrid Beers="@Pubs"></PubsGrid>
 </div>
 
 <div hidden="@HideDetails">
 	<SalesOrderDetails SalesOrder="@SalesOrder"
-	                   Beers="@Beers"
+	                   Pubs="@Pubs"
 	                   Customers="@Customers"
 	                   Warehouses="@Warehouses"></SalesOrderDetails>		
 </div>
