--- a/src/BrewUp.Web.Modules.Pubs/Components/PubsGrid.razor
+++ b/src/BrewUp.Web.Modules.Pubs/Components/PubsGrid.razor
@@ -2,18 +2,17 @@
 @using MudBlazor
 @using BrewUp.Web.Modules.Pubs.Extensions.Dtos
 
-<MudTable Items="@Beers" Hover="true" 
+<MudTable Items="@Pubs" Hover="true" 
           @ref="MudTable" 
           Striped="true" 
           RowClassFunc="@SelectedRowClassFunc" 
-          OnRowClick="RowClickEvent" T="BeerJson"
+          OnRowClick="RowClickEvent" T="PubJson"
           id="pubs-grid">
 	<HeaderContent>
 		<MudTh>Beer Type</MudTh>
 		<MudTh>Quantity</MudTh>
 	</HeaderContent>
 	<RowTemplate>
-		<MudTd DataLabel="Beer Type">@context.BeerName</MudTd>
-		<MudTd DataLabel="Quantity">@context.Quantity</MudTd>
+		<MudTd DataLabel="Name">@context.PubName</MudTd>
 	</RowTemplate>
 </MudTable>
