--- a/src/BrewUp.Web/Client/App.razor
+++ b/src/BrewUp.Web/Client/App.razor
@@ -1,42 +1,28 @@
 ﻿@inherits AppBase
-@using Microsoft.AspNetCore.Components.Authorization
 @using BrewUp.Web.Client.Shared
 
-<CascadingAuthenticationState>
-	<Router AppAssembly="@typeof(Program).Assembly"
-	        AdditionalAssemblies="@LazyLoadedAssemblies"
-	        OnNavigateAsync="@OnNavigateAsync">
+<Router AppAssembly="@typeof(Program).Assembly"
+        AdditionalAssemblies="@LazyLoadedAssemblies"
+        OnNavigateAsync="@OnNavigateAsync">
 
-		<Navigating>
-			<div class="splash-screen">
-				<div class="spinner-border"></div>
-				<div class="splash-screen-text">Loading...</div>
-			</div>
-		</Navigating>
-		
-		<Found Context="routeData">
-			<AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-				<NotAuthorized>
-					@if (!context.User.Identity.IsAuthenticated)
-					{
-						<RedirectToLogin />
-					}
-					else
-					{
-						<p role="alert">Sorry :-( - You are not authorized to access this resource.</p>
-					}
-				</NotAuthorized>
-			</AuthorizeRouteView>
-		</Found>
-		<NotFound>
-			<LayoutView Layout="@typeof(MainLayout)">
-				<p>Sorry, there's nothing at this address.</p>
-				<p>Loaded assemblies are:</p>
-				@foreach (var assembly in LazyLoadedAssemblies)
-				{
-					<h5>@assembly.FullName</h5>
-				}
-			</LayoutView>
-		</NotFound>
-	</Router>
-</CascadingAuthenticationState>
+	<Navigating>
+		<div class="splash-screen">
+			<div class="spinner-border"></div>
+			<div class="splash-screen-text">Loading...</div>
+		</div>
+	</Navigating>
+	
+	<Found Context="routeData">
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
+    </Found>
+    <NotFound>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <p>Sorry, there's nothing at this address.</p>
+            <p>Loaded assemblies are:</p>
+            @foreach (var assembly in LazyLoadedAssemblies)
+            {
+                <h5>@assembly.FullName</h5>
+            }
+        </LayoutView>
+    </NotFound>
+</Router>
