--- a/src/BrewUp.Web.Modules.Production/Production.razor
+++ b/src/BrewUp.Web.Modules.Production/Production.razor
@@ -2,6 +2,7 @@
 @page "/production"
 
 @using MudBlazor
+@using BrewUp.Web.Modules.Production.Components
 
 <PageTitle>Production</PageTitle>
 
@@ -10,14 +11,3 @@
 <MudAlert>@Message</MudAlert>
 
 <ProductionGrid ProductionOrders="@ProductionOrders"></ProductionGrid>
-
-<MudDialog @bind-IsVisible="ShowOrder">
-	<TitleContent>
-		<MudText Typo="Typo.h6">
-			<MudIcon Icon="@Icons.Material.Filled.Edit"/> Launch Beer Order
-		</MudText>
-	</TitleContent>
-	<DialogContent>
-		<BeerProductionOrder Order="@CurrentOrder" Beers="@Beers"/>
-	</DialogContent>
-</MudDialog>
