--- a/src/BrewUp.Web/Client/_Imports.razor
+++ b/src/BrewUp.Web/Client/_Imports.razor
@@ -6,3 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using BrewUp.Web.Client
+@using BrewUp.Web.Client.Shared
